--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "npm-run-all2": "^6.1.2",
     "postcss": "^8.4.37",
     "prettier": "^3.0.3",
+    "sass": "^1.79.5",
     "tailwindcss": "^3.4.1",
     "typescript": "~5.4.0",
     "vite": "^5.1.6",
